# rename-images

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  rename_images.py
.github/scripts/: apply-branch-protection.sh
tests/: conftest.py  test_rename_images.py
